<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root"
    tools:context=".PatternLockAct">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/blue"
        android:gravity="center">

        <com.shuhart.stepview.StepView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:sv_animationType="All"
            app:sv_textPadding="12sp"
            android:id="@+id/step_view"
            app:sv_selectedCircleColor="@color/colorAccent"
            app:sv_selectedTextColor="@color/white"
            app:sv_stepLineWidth="1dp"
            app:sv_stepPadding="4dp"
            app:sv_nextTextColor="@color/white"
            app:sv_nextStepLineColor="@color/colorAccent"
            app:sv_doneCircleColor="@color/colorAccent"
            app:sv_doneStepLineColor="@color/colorAccent"
            app:sv_doneCircleRadius="12dp"
            app:sv_selectedCircleRadius="12dp"
            app:sv_selectedStepNumberColor="@color/colorPrimary"
            app:sv_stepViewStyle="@style/StepView"
            app:sv_doneStepMarkColor="@color/colorPrimary"
            app:sv_stepNumberTextSize="12sp"
            app:sv_typeface="@font/abhaya_libre"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/normal_layout"
            android:orientation="horizontal"
            android:gravity="center">
            
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:src="@drawable/ic_security_black_24dp"
                android:id="@+id/app_icon"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/abhaya_libre"
                    android:text="@string/prote_cted"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif-monospace"
                    android:text="@string/app_name"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget_password"
                android:textColor="@color/white"/>


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_centerInParent="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/status_password"
            android:padding="20sp"/>

        <com.andrognito.patternlockview.PatternLockView
            android:layout_width="250dp"
            android:layout_height="300dp"
            android:layout_margin="5dp"
            app:correctStateColor="@color/green"
            app:dotCount="3"
            app:dotNormalSize="10sp"
            app:dotSelectedSize="12sp"
            app:normalStateColor="@color/gray"
            app:pathWidth="8dp"
            android:id="@+id/pattern_view"/>
    </LinearLayout>


</RelativeLayout>